# sortify

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  PRIVACY.md  README.md  SECURITY.md  build_windows_msix.py  config.py  main.py  mkdocs.yml  network_rules.json  pyproject.toml  requirements.txt  sandbox_cli.py  setup.bat  setup.sh  setup_sandbox.sh  smart-autosorter.spec  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/AGENTS/: manifest.json  merge-conflicts.md  pr-gatekeeper.md
.github/workflows/: ci.yml  docs.yml  release.yml  windows-release.yml
ADRs/: 0001-configuration-strategy.md  0002-logging-strategy.md
app/: __init__.py  build.py  build_macos.py  build_windows.py  config.py  config_schema.json  demo.py  log_filter.py  main.py
app/core/: __init__.py  analyzer.py  analyzer_strategies.py  cache.py  crypto.py  db.py  db_conn.py  db_connection.py  db_init.py  db_worker.py  env_helper.py  extractor.py  extractor_strategies.py  hf_manifest.json  history.py  integration.py  link_manager.py  metadata.py  mover.py  path_utils.py  scanner.py  session.py  shared_registry.py  verifier.py
app/ui/: __init__.py  app.py  console.py  dialog_helper.py  dialogs.py  recovery.py  settings.py  wizard.py
core/: __init__.py  analyzer.py  extractor.py  logger.py  mover.py  validator.py
docs/: admin_guide.md  api_reference.md  architecture.md  architecture_guide.md  conf.py  config.md  contributor.md  core.md  core.rst  doc_manifest.json  index.md  index.rst  privacy_manifest.md  troubleshooting.md  ui.md  user_guide.md
docs/adr/: 2026-07-22-dual-path-model-resolution.md  2026-07-22-production-scoped-duplication-check.md
offline_bundle/: requirements.txt
sandbox/dataset_golden/: sample.csv  sample.docx  sample.txt  sample.xlsx
scripts/: build.py  generate_api_reference.py  generate_docs.py  install_offline.py  prepare_offline.py  prompt_manifest.py  test_cli.py  validate_architecture.py  validate_config.py  validate_docs.py  validate_duplicates.py  validate_duplication.py  validate_links.py
tests/: baseline_metrics.json  conftest.py  generate_corpus.py  mock_ui.py  test_analyzer.py  test_async_file_generator.py  test_auto_rollback_thread_recovery.py  test_bulk_db_sync.py  test_concurrency_locks.py  test_config_validation.py  test_coverage_gap.py  test_crypto.py  test_database_migration.py  test_db_backed_rollback.py  test_dialog_helper.py  test_dry_run_autocorrect.py  test_dual_path.py  test_env_helper.py  test_exfat_smb.py  test_extractor.py  test_extractor_vision.py  test_history.py  test_history_bypass.py  test_ingestion_fail_dialog.py  test_ingestion_safeguards.py  test_integration.py  test_iterative_scan.py  test_keyword_rules.py  test_lazy_initialization.py  test_link_management.py  test_lite_build.py  test_log_scrubber.py  test_logit_bias_suppressor.py  test_metadata.py  test_path_integrity.py  test_physical_integration.py  test_quality_guardrails.py  test_recovery.py  test_robust_integration.py  test_shared_registry.py  (+10 more)
tests/corpus/: finance_data.csv  finance_report.txt  health_doc.docx  tech_data.xlsx  tech_notes.txt
tests/large_corpus/: finance_doc_1.txt  finance_doc_101.txt  finance_doc_105.txt  finance_doc_109.txt  finance_doc_113.txt  finance_doc_117.txt  finance_doc_121.txt  finance_doc_125.txt  finance_doc_129.txt  finance_doc_13.txt  finance_doc_133.txt  finance_doc_137.txt  finance_doc_141.txt  finance_doc_145.txt  finance_doc_149.txt  finance_doc_153.txt  finance_doc_157.txt  finance_doc_161.txt  finance_doc_165.txt  finance_doc_169.txt  finance_doc_17.txt  finance_doc_173.txt  finance_doc_177.txt  finance_doc_181.txt  finance_doc_185.txt  finance_doc_189.txt  finance_doc_193.txt  finance_doc_197.txt  finance_doc_201.txt  finance_doc_205.txt  finance_doc_209.txt  finance_doc_21.txt  finance_doc_213.txt  finance_doc_217.txt  finance_doc_221.txt  finance_doc_225.txt  finance_doc_229.txt  finance_doc_233.txt  finance_doc_237.txt  finance_doc_241.txt  (+460 more)
tests/snapshots/: clustering_plan.json  error_states_plan.json  manual_override_plan.json  nested_folders_plan.json
ui/: app.py  console.py  dialogs.py
