[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-autosorter"
version = "0.1.0"
description = "AI File Organizer Pro"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "customtkinter",
    "python-docx",
    "pypdf",
    "openpyxl",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock"
]

[project.scripts]
docs = "mkdocs:build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint, docs

[testenv:lint]
deps =
    ruff
    mypy
commands =
    ruff check .
    mypy app

[testenv:docs]
deps =
    mkdocs
    mkdocs-material
    mkdocstrings[python]
commands =
    mkdocs build
"""
