[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-autosorter"
version = "0.1.0"
description = "AI File Organizer Pro"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "customtkinter",
    "python-docx",
    "pypdf",
    "openpyxl",
    "pydantic-settings",
    "watchdog>=6.0.0",
    "sentence-transformers>=5.1.2",
    "pylnk3>=0.4.2",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "ruff",
    "mypy",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "reportlab>=5.0.0",
    "pyinstaller",
    "pre-commit"
]

[project.scripts]
smart-autosorter = "app.main:main"
docs = "mkdocs:build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint, docs

[testenv:lint]
deps =
    ruff
    mypy
commands =
    ruff check .
    mypy app

[testenv:docs]
deps =
    mkdocs
    mkdocs-material
    mkdocstrings[python]
commands =
    mkdocs build
"""

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "reportlab>=5.0.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "sqlcipher3-wheels==0.5.7",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
timeout = 60
