[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-autosorter"
version = "0.1.0"
description = "AI File Organizer Pro"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "scikit-learn",
    "nicegui",
    "python-docx",
    "pypdf",
    "openpyxl",
    "pydantic-settings",
    "watchdog>=6.0.0",
    "pylnk3>=0.4.2",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "jsonschema>=4.25.1",
    "easyocr>=1.7.0",
    "sqlcipher3-wheels==0.5.7",
    "transformers>=4.57.6",
]

[project.scripts]
smart-autosorter = "app.main:main"
docs = "mkdocs:build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D", "D417"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "F841", "E741"]
"scripts/*" = ["D"]
"app/core/analyzer_strategies.py" = ["D"]
"app/core/env_helper.py" = ["D"]
"app/core/metadata.py" = ["F841"]
"app/core/shared_registry.py" = ["D"]
"app/core/verifier.py" = ["D", "F401", "E741"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "reportlab>=5.0.0",
    "ruff",
]

build = [
    "pyinstaller",
    "sqlcipher3-wheels==0.5.7",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
timeout = 180
